--- a/header.css
+++ b/header.css
@@ -1,5 +1,5 @@
 .header {
-    background-color: rgb(122, 177, 35);
+    background-color: rgb(137, 26, 202);
     height: 90px;
     display: flex;
     flex-direction: row;
@@ -10,10 +10,13 @@
     top: 0px;
     left: 0px;
     right: 0px;
+    border-bottom-width: 2px;
+    border-bottom-style: solid;
+    border-bottom-color: rgb(53, 53, 53);
 }
 .leftsection {
     display: flex;
-    margin-left: 55px;
+    margin-left: 30px;
 }
 .gtasalogo {
     height: 90px;
@@ -24,10 +27,9 @@
     font-weight: 900;
     font-style: normal;
     font-size: large;
-    flex: 1;
     margin-left: 30px;
     margin-right: 30px;
-    max-width: 490px;
+    flex-shrink: 0;
 }
 .GTASAMODS {
     text-align: center;
@@ -42,31 +44,38 @@
     padding-right: 10px;
 }
 .searchbar {
+    flex: 1;
     font-size: larger;
     height: 48px;
     width: 280px;
-    border-radius: 24px;
-    border: none;
+    border-radius: none;
+    border-width: 1px;
     margin-right: 2px;
+    width: 0;
+}
+.searchbar::placeholder {
+    font-family: Arial, Helvetica, sans-serif;
+    padding-left: 10px;
 }
 .search-button {
-    background-color: aqua;
-    height: 52px;
-    width: 52px;
+    background-color: rgb(255, 255, 255);
+    height: 48px;
+    width: 50px;
     padding-top: 1px;
     padding-left: 1px;
     padding-right: 1px;
     padding-bottom: 1px;
-    border: none;
-    border-radius: 26px;
+    margin-left: -2px;
+    border-width: 1px;
+    border-radius: none;
 }
 .search-button:hover {
-    background-color: rgb(255, 0, 0);
+    background-color: rgb(226, 223, 223);
 }
 .search-button:active {
-    background-color: black;
+    background-color: rgb(150, 147, 147);
 }
 .search-icon {
-    height: 50px;
+    height: 45px;
     border-radius: 26px;
 }
