--- a/signinpagestyles.css
+++ b/signinpagestyles.css
@@ -5,10 +5,10 @@
 }
 .left {
     background-color: rgb(0, 0, 0);
-    height: 500px;
+    height: 486px;
     width: 500px;
-    margin-top: 120px;
-    margin-left: 70px;
+    padding-top: 100px;
+    padding-left: 70px;
 }
 .right {
     height: 500px;
@@ -26,12 +26,12 @@ h1 {
     font-weight: 200;
 }
 .ask {
-    color: rgb(202, 198, 198);
+    color: rgb(189, 183, 183);
     font-family: Arial, Helvetica, sans-serif;
     font-weight: 100;
     font-size: smaller;
 }
-.gtasalogo {
+.mylogo {
     height: 90px;
 }
 button {
