--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,10 @@
 body {
-    background-color: yellowgreen;
+    background-color: rgb(160, 67, 214);
     color: rgb(0, 0, 0);
     font-family: Arial;
     font-weight: 500;
     margin-top: 100px;
+    padding-left: 84px;
 }
 .side-button {
     background-color: rgb(255, 0, 0);
@@ -13,6 +14,7 @@ body {
 }
 .side-button:hover {
     background-color: rgb(230, 61, 61);
+    cursor: pointer;
 }
 .side-button:active {
     background-color: rgb(228, 142, 142);
@@ -50,7 +52,7 @@ body {
     margin-left: 4px;
     margin-right: 4px;
     margin-bottom: 4px;
-    width: 144px;
+    width: 295px;
 }
 .section {
     background-color: rgb(0, 0, 0);
@@ -58,25 +60,6 @@ body {
     display: inline-block;
     margin-right: 0px;
     margin-bottom: 20px;
-    justify-content: space-between;
-}
-.getmoremods {
-    background-color: rgb(0, 153, 255);
-    color: white;
-    height: 34px;
-    width: 353px;
-    border-color: black;
-    border-radius: 17px;
-}
-.getmoremods:hover {
-    background-color: aqua;
-}
-.getmoremods:active {
-    background-color: aquamarine;
-}
-.lastline {
-    display: flex;
-    width: 1fr;
     justify-content: space-between;
 }
 .movable {
